--- a/assets/css/jupyter-notebook.scss
+++ b/assets/css/jupyter-notebook.scss
@@ -1073,12 +1073,12 @@ th {
   box-sizing: border-box;
 }
 html {
-  font-size: 10px;
+  font-size: 16px;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 13px;
+  font-size: 1em;
   line-height: 1.42857143;
   color: #000;
   background-color: #fff;
@@ -1259,27 +1259,27 @@ h6 .small,
 }
 h1,
 .h1 {
-  font-size: 33px;
+  font-size: 1em;
 }
 h2,
-.h2 {
-  font-size: 27px;
+.h2{
+  font-size: 0.8em;
 }
 h3,
 .h3 {
-  font-size: 23px;
+  font-size: 0.677em;
 }
 h4,
 .h4 {
-  font-size: 17px;
+  font-size: 0.677em;
 }
 h5,
 .h5 {
-  font-size: 13px;
+  font-size: 0.677em;
 }
 h6,
 .h6 {
-  font-size: 12px;
+  font-size: 0.677em;
 }
 p {
   margin: 0 0 9px;
