--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -49,6 +49,7 @@
   display: flex;
   -ms-flex-item-align: center;
   align-self: center;
+  font-size:16px;
   font-weight: bold;
   // z-index: 20;
 }
