--- a/_sass/minimal-mistakes/_reset.scss
+++ b/_sass/minimal-mistakes/_reset.scss
@@ -76,7 +76,8 @@ audio:not([controls]) {
 }
 
 a {
-  color: $link-color;
+  color: black;
+  text-decoration-line: none;
 }
 
 /* Apply focus state */
