--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -151,6 +151,7 @@
   padding-right: 25px;
   line-height: 1;
 
+
   @include breakpoint($large) {
     display: block;
     width: 100%;
@@ -162,6 +163,7 @@
     color: inherit;
     text-decoration: none;
     font-size:16px;
+    font-weight: bold;
   }
 }
 
