--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -4,16 +4,13 @@ layout: archive
 
 {{ content }}
 
+
 <ul class="posts-list">
   {% assign category = page.category | default: page.title %}
   {% for post in site.categories[category] %}
-    <li>
-      <h3>
         <a href="{{ site.baseurl }}{{ post.url }}">
-          {{ post.title }}
+          {% include archive-single.html type=entries_layout %}
         </a>
-        <small>{{ post.date | date_to_string }}</small>
-      </h3>
-    </li>
   {% endfor %}
 </ul>
+
